--- a/online-zoo/pages/donate/style.css
+++ b/online-zoo/pages/donate/style.css
@@ -8,15 +8,83 @@
 
 
 .content-donate{
-
+    padding-top: 40px;
     height: 1482px;
     background: linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
 }
 
 
 .donate-body{
-
-
+    margin: auto;
     height: 1156px;
     width: 1160px;
 }
+
+.title__donate{
+    font-size: 36px;
+    line-height: 130%;
+    color: #FFFFFF;
+    font-weight: 400;
+
+    margin-bottom: 10px;
+}
+
+.decription__donate{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+    color: #FFFFFF;
+
+    margin-bottom: 40px;
+}
+
+
+.subtitle__donate{
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 130%;
+    color: #FE9013;
+    margin-bottom: 60px;
+
+}
+
+.donate__container{
+    background: rgba(255, 255, 255, 0.52);
+    backdrop-filter: blur(2px);
+    height: 964px;
+    border-radius: 20px;
+    padding-top: 40px;
+    padding-right: 92px;
+    padding-left: 92px;
+
+}
+
+.title_donate-container{
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 120%;
+    text-align: center;
+    color: #FE9013;
+}
+
+
+.subtitle_donate-container{
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 120%;
+    color: #333B41;
+}
+
+.title_donate-container{
+    margin-bottom: 10px;
+}
+
+
+.subtitle_donate-container{
+    margin-bottom: 60px;
+}
+
+
+
+
+
