--- a/online-zoo/style.css
+++ b/online-zoo/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
 :root {
   --max-width: 1160px;
 
