--- a/online-zoo/style.css
+++ b/online-zoo/style.css
@@ -594,7 +594,7 @@ button {
 .testimonials__column{
   width: 268px;
   height: 391px;
-  border: 5px solid transparent;
+  border: 0.7px solid transparent;
   background-image: linear-gradient(#f5f7f6, #f5f7f6), linear-gradient( to right bottom, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #e0d8f0 80.49%, #eaf7fe 127.9%, #eaf7fe 149.54% ), linear-gradient( 315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #e0d8f0 80.49%, #eaf7fe 127.9%, #eaf7fe 149.54% );
   border-radius: 20px;
   background-clip: content-box, border-box;
@@ -618,7 +618,7 @@ button {
 
 .testimonials__info{
   display: grid;
-  grid-template-columns: 1fr 1fr 0.3fr 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: min-content;
   margin-bottom: 11px;
   align-items: end;
@@ -865,15 +865,18 @@ button {
 }
 
 
-.author-footer{
-  text-align: right;
+.footer-author{
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 10px;
 }
 
-.author-footer p{
-  font-weight: 100;
+.footer-author p{
   font-size: 16px;
   line-height: 130%;
-  color: #FFFFFF;
+  color: #757575
 }
 
 
