--- a/online-zoo/style.css
+++ b/online-zoo/style.css
@@ -816,7 +816,7 @@ button {
   height: 42px;
   padding: 10px 7px 10px 10px;
   border-radius: 2px;
-  border: 0.7px solid red;
+  border: 0.7px solid orange;
   font-weight: 400;
   font-size: 16px;
   line-height: 140%;
