--- a/online-zoo/pages/donate/style.css
+++ b/online-zoo/pages/donate/style.css
@@ -1,13 +1,20 @@
-
+ 
 
 .panda-donate{
     height: 390px;
-    background-image: url(../../assets/images/section1_ft.png);
+    background-image: url(../../assets/background/panda_bg.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
+header{
+    width: 100%;
+    height: 80px;
+    z-index: 2;
+    top: 0;
+    background-color: black;
+}
 
 .content-donate{
     padding-top: 40px;
