--- a/online-zoo/style.css
+++ b/online-zoo/style.css
@@ -14,6 +14,8 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
   --color-hover: rgba(196, 196, 196, 0.5);
 }
 
+
+
 body {
   font-family: "Roboto";
   font-style: normal;
@@ -34,6 +36,7 @@ button {
   cursor: pointer;
 }
 
+
 .header {
   position: absolute;
   width: 100%;
@@ -43,13 +46,19 @@ button {
   background-color: black;
 }
 
+.wrapper{
+  max-width: var(--max-width);
+  padding: 0 30px;
+  box-sizing: content-box;
+  margin: 0 auto;
+
+}
+
 .header-wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: var(--max-width);
   height: 100%;
-  margin: auto;
 }
 
 .logo {
@@ -167,7 +176,6 @@ button {
   height: 54px;
 
   background: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
-  border-radius: 25px;
 
   color: white;
   font-weight: 500;
@@ -200,6 +208,8 @@ button {
 
 .panda-button {
   margin: 60px auto 0 auto;
+  border-radius: 25px;
+
 }
 
 .backstage {
@@ -219,14 +229,22 @@ button {
 .backstage-wrapper {
   display: flex;
   justify-content: space-between;
-  max-width: var(--max-width);
-  height: 403px;
-  margin: auto;
+  /* max-width: var(--max-width); */
+  height: 408px;
+  gap: 30px;
+}
+
+
+.backstage-cap>img{
+  max-width: 100%;
+  height: 100%;
 }
 
 .backstage-content {
   max-width: 465px;
 }
+
+
 
 .backstage-title {
   font-weight: 400;
@@ -245,7 +263,7 @@ button {
 }
 
 .undertitle {
-  margin-top: 22px;
+  margin-top: 34px;
 }
 
 .backstage-subtitle {
@@ -271,7 +289,11 @@ button {
   position: relative;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  /* grid-template-columns: repeat(3, 314px); */
+
   grid-template-rows: repeat(2, 426px);
+  /* grid-template-rows: repeat(2, 314px); */
+
   column-gap: 30px;
   row-gap: 20px;
   max-width: var(--max-width);
@@ -356,6 +378,8 @@ button {
   display: block;
   margin: 80px auto;
   letter-spacing: -1px;
+  border-radius: 25px;
+
 }
 
 .pets-button {
@@ -417,9 +441,7 @@ button {
 }
 
 .pick-container {
-  width: var(--max-width);
   height: 835px;
-  margin: 0 auto;
   padding: 41px 10px 59px 99px;
   background: rgba(253, 253, 255, 0.52);
   border-radius: 20px;
@@ -443,6 +465,7 @@ button {
  flex-direction: column;
  align-items: center;
 }
+
 .pick-title{
   font-weight: 400;
   line-height: 58px;
@@ -450,8 +473,6 @@ button {
   font-size: 48px;
   text-align: center;
 }
-
-
 
 .pick-subtitle{
   width: 850px;
@@ -668,6 +689,7 @@ button {
 
 .button-testiminials{
   margin-top: 32px;
+  border-radius: 5px;
 }
 
 
@@ -702,6 +724,7 @@ button {
   background: #111115;
   padding:40px;
   height: 443px;
+  width: 100%;
 }
 
 .link{
@@ -784,6 +807,7 @@ button {
 .button-footer{
   margin-top: 60px;
   margin-bottom: 34px;
+  border-radius: 5px;
 }
 
 
@@ -878,7 +902,7 @@ button {
 .footer-author p{
   font-size: 16px;
   line-height: 130%;
-  color: #757575
+  color: white;
 }
 
 
