--- a/online-zoo/pages/media/media.css
+++ b/online-zoo/pages/media/media.css
@@ -1,48 +1,413 @@
-@media (max-width: 1000px) {
-    
-}
-
-
-@media (max-width: 1160px) {
-    .backstage-flower{
-        display: none;
-    }
-
-    
-}
-
 @media (max-width: 1430px) {
-
-  .pet-item{
-    max-width: 314px;
-    max-height: 314px;
-
+  .pets-grid {
+    grid-template-columns: repeat(3, 293px);
+    grid-template-rows: repeat(2, 354px);
+    margin: 0 auto;
+    max-width: max-content;
+    max-height: 100%;
+    box-sizing: border-box;
+    row-gap: 92px;
   }
 
-  .pet-image{
-    max-width: 294x;
+  .pets-container {
+    padding: 0 30px;
+    max-height: 802px;
+  }
+
+  .pet-item {
+    max-width: 292px;
     max-height: 294px;
+  }
 
+  .pet-image {
+    max-width: 270x;
+    max-height: 270px;
+    justify-content: center;
   }
-  .pet-item:hover .pet-image {
-    max-width: 314x;
-    max-height: 314px;
+
+  .pets-buttons {
+    position: relative;
+    top: -433px;
+    width: 100%;
+    gap: 171px;
     margin: 0;
+    /* align-items: center;
+    justify-content: center; */
+    justify-content: center;
   }
-  
+
+  /*  
+  .pets-buttons{
+    position: absolute;
+    top: 340px;
+    display: flex;
+    width:  942px;
+    margin-left: 30px;
+    gap:10px;
+    justify-content: center;
+  }
   .pets-button{
     position: relative;
+  } */
 
+  .pet-item:hover {
+    max-height: max-content;
   }
-  .pets-button-right{
+  /* .pet-item:hover .pet-image {
+    width: 100%;
+  }
+  .pet-item:hover .pet-info {
+    height: 60px;
+    padding-top: 6px;
+  } */
+
+  .pick-container {
+    margin: 0 30px;
+    padding: 30px 48px 50px 48px;
   }
 
-  .pets-button-left{
-
+  .pick-subtitle {
+    margin-top: 20px;
   }
 
-  .pets-container{
-  grid-template-columns: repeat(3, 314px);
-
+  .pick-pretext {
+    margin-top: 20px;
   }
+  /* .pick-works-title{
+    margin-bottom: 40px;
+  } */
+
+  .pick-block2 {
+    margin-top: 40px;
+  }
+  .pets-choose-button {
+    margin-top: 70px;
+    margin-bottom: 50px;
+  }
+
+  .testimonials__title {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 1225px) {
+  .testimonials {
+    padding-top: 100px;
+    padding-bottom: 140px;
+    max-height: 842px;
+  }
+
+  .testimonials__column:nth-child(4) {
+    display: none;
+  }
+
+  .testimonials__row {
+    width: auto;
+    /* gap: 30px ; */
+    /* width: 940px; */
+  }
+
+  .testimonials__column {
+    max-width: 293px;
+  }
+
+  .testimonials__row {
+    margin: 0px;
+  }
+
+  .line[type="range"] {
+    width: 390px;
+  }
+
+  .line[type="range"]::-webkit-slider-thumb {
+    width: 75px;
+    height: 6px;
+  }
+
+  .line[type="range"]::-moz-range-thumb {
+    width: 75px;
+    height: 6px;
+  }
+
+  .testimonials-image-right {
+    width: 300px;
+    height: 295px;
+    right: -61px;
+    bottom: -80px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .footer {
+    padding: 40px 18px 50px 43px;
+  }
+
+  .middle-container {
+    /* margin-right: 0px; */
+    margin-left: -8px;
+  }
+  .footer-right-container {
+    margin-left: -127px;
+  }
+
+  .panda {
+    background-image: url(../../assets/background/panda_1198_584.svg);
+    background-size: 1198px 584px;
+    height: 584px;
+  }
+
+  .panda-wrapper {
+    padding-top: 64px;
+    padding-right: 86px;
+  }
+
+  .panda-circle {
+    width: 367px;
+    height: 367px;
+    top: 69px;
+    top: 15px;
+    left: -58px;
+  }
+
+  .panda-title {
+    left: -25px;
+    max-width: 400.25px;
+    height: 320px;
+    font-size: 85px;
+  }
+
+  .panda-button {
+    margin-top: 53px;
+  }
+
+  /* Panda                                                             */
+}
+
+@media (max-width: 1160px) {
+  .backstage-flower {
+    display: none;
+  }
+
+  .backstage {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
+
+
+
+@media (max-width: 990px) {
+  .backstage-cap__img {
+    max-width: 70%;
+    max-height: 70%;
+  }
+}
+
+@media (max-width: 960px) {
+  .pets {
+    padding: 20px;
+    height: auto;
+  }
+  .pets-container {
+    height: max-content;
+    padding: 0px;
+    height: 756px;
+  }
+
+  .pets-grid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 332px);
+  }
+
+  .pet-item {
+    width: 285px;
+    height: 332px;
+  }
+  .pet-item:nth-child(n + 5) {
+    display: none;
+  }
+
+  .pets-buttons {
+    top: -405px;
+    gap: 60px;
+  }
+
+  .pet-item:hover {
+    max-height: max-content;
+  }
+  .pet-image {
+    margin: 0px;
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .pet-item:hover .pet-info {
+    margin-top: 0px;
+    padding-top: 0px;
+    padding-left: 12.5px;
+    height: max-content;
+  }
+  .pet-icon-food {
+    top: 0px;
+    right: 8px;
+  }
+
+  .pet-image-right {
+    width: 175px;
+    height: 131px;
+  }
+  .pet-image-left {
+    height: 202px;
+  }
+
+  .pets-choose-button {
+    margin: 60px auto;
+  }
+
+  
+  /* Testimonial */
+  .testimonials{
+    padding: 60px 0px 80px;
+    overflow: hidden;
+    height: min-content;
+  }
+  .testimonials__container{
+    height: min-content;
+  }
+
+  .testimonials__row{
+    flex-direction: column;
+    gap:15px;
+  }
+
+  .testimonials__column{
+    max-width: 100%;
+    height: 109px;
+  }
+
+  .testimonials__card{
+    padding: 15px 28px 8px 12px;
+  }
+  .testimonials__text{
+    text-overflow: ellipsis;
+    white-space: nowrap; /* Запрещаем перенос строк */
+    overflow: hidden; /* Обрезаем все, что не помещается в область */ 
+    font-size: 15px;
+    line-height: 120%;
+    pointer-events: none; /* Не реагирует на мышь, чтобы не мешал текст*/
+  }
+  .line[type="range"]{
+    display: none;
+  }
+
+  .button-testiminials{
+    margin: 40px 25% 0px 25%;
+  }
+
+  .testimonials-image-right{
+    max-width: 149.88px;
+    max-height:147.15px;
+    right: -33px;
+    bottom: -51px;
+  }
+}
+
+@media (max-width: 850px) {
+  .pick{
+    padding: 20px 0;
+    height: min-content;
+  }
+  .p{
+    text-overflow: ellipsis; /* Добавляем многоточие */
+  }
+  .pick-container {
+    margin: 0px;
+    padding: 10px 20px 60px 20px;
+    height: min-content;
+  }
+
+  .pick-works-wrapper{
+    justify-content: center;
+    gap: 42px;
+  }
+
+  .pick-works-wrapper > img {
+    display: none;
+  }
+
+  .pick-item:not(:last-child)::after {
+    /* content: url(http://static.skaip.org/img/emoticons/180x180/f6fcff/penguin.gif); */
+    content: url(../../assets/icons/greenLine.svg);
+    position: relative;
+    left: 143px;
+    top: -233px;
+  }
+
+  .pick-item{
+    width: 168px;
+    height: 168px;
+  }
+
+  .pets-choose-button{
+    margin: 40px auto 0px;
+  }
+  
+
+
+
+
+
+
+}
+
+@media (max-width: 820px) {
+  .wrapper {
+    padding: 0 20px;
+  }
+
+  .backstage-cap__img {
+    display: none;
+  }
+
+  .backstage {
+    padding: 60px 0px;
+    height: max-content;
+    overflow: hidden;
+    display: flex;
+  }
+
+  .backstage-wrapper {
+    justify-content: flex-start;
+    gap: 0px;
+    margin: 0;
+    padding-right: 0px;
+  }
+
+  .backstage-content {
+    max-width: 495px;
+    height: 367px;
+    word-wrap: break-word;
+  }
+  .undertitle {
+    margin-top: 20px;
+  }
+
+  .backstage-subtitle {
+    margin-top: 30px;
+  }
+
+  .undersubtitle {
+    margin-top: 20px;
+  }
+
+  .backstage-flower {
+    position: relative;
+    display: inline-block;
+    right: -35px;
+    width: 231px;
+    height: 476px;
+    top: -50px;
+  }
+
+  /* Pets */
 }
