--- a/online-zoo/pages/media/media.css
+++ b/online-zoo/pages/media/media.css
@@ -235,165 +235,83 @@
 }
 
 @media (max-width: 990px) {
-    .header {
-        height: 34px;
-    }
-
-    .header-wrapper {
-        position: absolute;
-        top: 200px;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-content: space-between;
-    }
-
-    .header .logo {
-        top: 10px;
-        width: 60px;
-        height: 33px;
-        border: none;
-        font-size: 12px;
-        line-height: 120%;
-        margin-bottom: 30px;
-    }
-
-    .left-container {
-        display: block;
-        position: absolute;
-        top: -210px;
-        margin-left: 100px;
-        padding: 0 100px 20px 0;
-    }
-
-    .header .bamboo {
-        left: 9px;
-        top: 12px;
-        height: 15px;
-    }
-
-    .header .nav-container {
-        display: block;
-    }
-
-    .header .nav-item {
-        margin-bottom: 15px;
-        white-space: nowrap;
-    }
-
-    .header .header-nav {
-        visibility: hidden;
-    }
-
-    .right-container {
-        visibility: hidden;
-        margin-left: 27px;
-        margin-top: 28px;
-        opacity: 0.7;
-    }
-
-    .hamburger {
-        display: block;
-    }
-
-
-    .checkbox1:checked~div .logo {
-        color: #f9804b;
-        border: 1px solid #f9804b;
-    }
-    
-    .checkbox1:checked~div .left-container {
-        background-color: gray;
-        opacity: 0.7;
-    }
-
-    .checkbox1:checked~div .nav-container {
-        visibility: visible;
-    }
-
-    .checkbox1:checked~div .right-container {
-        visibility: visible;
-    }
-
-    .panda {
-        height: 373px;
-    }
-
-    .panda-container {
-        display: block;
-        position: relative;
-    }
-
-    .panda-wrapper {
-        padding-top: 64px;
-        padding-right: 86px;
-    }
-
-    .panda-title {
-        position: absolute;
-        left: 364px;
-        top: 78px;
-        max-width: 255px;
-        height: 204px;
-        font-size: 54px;
-    }
-
-    .panda-button {
-        position: absolute;
-        left: 15px;
-        top: 225px;
-    }
-
-    .circle {
-        width: 237px;
-        height: 237px;
-        top: 45px;
-        left: 325px;
-    }
 
     .footer {
+        height: 282px;
         padding: 12px 20px;
-        height: 258px;
     }
 
-    .footer-left_container {
+    .footer__container {
         display: block;
-        height: 240px;
-    }
-
-    .button-footer {
-        margin-top: 32px;
-
-    }
-
-    .footer-list {
         position: relative;
-        left: 570px;
-        top: -188px;
     }
 
     .footer-list a {
         display: none;
     }
 
-    .middle-container {
-        position: relative;
-        left: -100px;
-        bottom: 30px;
-    }
-
-    .footer-right-container {
-        width: 200px;
-        height: 93px;
-    }
-
     .info-right {
         display: none;
     }
 
+    .footer-left_container {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-content: space-between;
+        align-items: baseline;
+        width: 100%;
+        height: 170px;
+    }
+
+    .test-container {
+        height: 172px;
+        max-width: 100%;
+    }
+
+    .button-footer {
+        margin: 32px 0 0 0;
+    }
+
+    .footer_img {
+        margin: 0;
+    }
+
+    .footer-list li {
+        margin: 0 0 20px 0;
+        height: 26px;
+    }
+
+    .footer-list li:last-child {
+        margin: 0;
+    }
+
+    .middle-container {
+        display: flex;
+        align-items: flex-end;
+        width: max-content;
+        margin: 0;
+        bottom: 0;
+        left: 0;
+        height: calc(100% - 170px);
+        max-height: 100%;
+    }
+
+    .nav-container {
+        gap: 37px;
+    }
+
+    .footer-right-container {
+        left: 0;
+        bottom: 0;
+        height: 0;
+        
+    }
+
     .footer-author {
         position: absolute;
-        left: -190px;
-        bottom: -250px;
-        font-size: 15px;
+        right: 0;
+        bottom: 0;
+        width: 480px;
     }
 }
