--- a/online-zoo/pages/media/media.css
+++ b/online-zoo/pages/media/media.css
@@ -236,6 +236,121 @@
 
 @media (max-width: 990px) {
 
+    .header {
+        height: 34px;
+    }
+
+    .header-wrapper {
+        position: absolute;
+        top: 200px;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-content: space-between;
+    }
+
+    .header .logo {
+        top: 10px;
+        width: 60px;
+        height: 33px;
+        border: none;
+        font-size: 12px;
+        line-height: 120%;
+        margin-bottom: 30px;
+    }
+
+    .left-container {
+        display: block;
+        position: absolute;
+        top: -210px;
+        margin-left: 100px;
+        padding: 0 100px 20px 0;
+    }
+
+    .header .bamboo {
+        left: 9px;
+        top: 12px;
+        height: 15px;
+    }
+
+    .header .nav-container {
+        display: block;
+    }
+
+    .header .nav-item {
+        margin-bottom: 15px;
+        white-space: nowrap;
+    }
+
+    .header .header-nav {
+        visibility: hidden;
+    }
+
+    .right-container {
+        visibility: hidden;
+        margin-left: 27px;
+        margin-top: 28px;
+        opacity: 0.7;
+    }
+
+    .hamburger {
+        display: block;
+    }
+
+
+    .checkbox1:checked~div .logo {
+        color: #f9804b;
+        border: 1px solid #f9804b;
+    }
+
+    .checkbox1:checked~div .left-container {
+        background-color: gray;
+        opacity: 0.7;
+    }
+
+    .checkbox1:checked~div .nav-container {
+        visibility: visible;
+    }
+
+    .checkbox1:checked~div .right-container {
+        visibility: visible;
+    }
+
+    .panda {
+        height: 373px;
+    }
+
+    .panda-container {
+        display: block;
+        position: relative;
+    }
+
+    .panda-wrapper {
+        padding-top: 64px;
+        padding-right: 86px;
+    }
+
+    .panda-title {
+        position: absolute;
+        left: 364px;
+        top: 78px;
+        max-width: 255px;
+        height: 204px;
+        font-size: 54px;
+    }
+
+    .panda-button {
+        position: absolute;
+        left: 15px;
+        top: 225px;
+    }
+
+    .circle {
+        width: 237px;
+        height: 237px;
+        top: 45px;
+        left: 325px;
+    }
+
     .wrapper {
         padding: 0 20px;
     }
@@ -390,6 +505,7 @@
     .pick-works-wrapper {
         justify-content: center;
         gap: 42px;
+        max-width: 100%;
     }
 
     .pick-works-wrapper>img {
@@ -457,10 +573,10 @@
     }
 
     .testimonials-image-right {
-        max-width: 149.88px;
-        max-height: 147.15px;
-        right: -33px;
-        bottom: -51px;
+        width: 149.88px;
+        height: 189.88px;
+        right: -10px;
+        bottom: -65px;
     }
 
     .footer {
