--- a/online-zoo/pages/donate/style.css
+++ b/online-zoo/pages/donate/style.css
@@ -1,238 +1,327 @@
-  .panda-donate {
-      height: 390px;
-      background-image: url(../../assets/background/panda_bg.svg);
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-  }
+.panda-donate {
+    height: 390px;
+    background-image: url(../../assets/background/panda_bg.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
-  .content-donate {
-      padding-top: 40px;
-      height: 1482px;
-      background: linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
-  }
+.content-donate {
+    padding-top: 40px;
+    height: 1482px;
+    background: linear-gradient(315.75deg,
+            rgba(254, 210, 144, 0.7) 30.06%,
+            #febdab 100.95%,
+            rgba(254, 210, 144, 0.7) 106.36%),
+        linear-gradient(315.75deg,
+            rgba(254, 189, 171, 0.74) 30.06%,
+            rgba(243, 169, 248, 0.66) 50.74%,
+            #e0d8f0 80.49%,
+            #eaf7fe 127.9%,
+            #eaf7fe 149.54%),
+        linear-gradient(315.75deg,
+            rgba(254, 189, 171, 0.74) 30.06%,
+            rgba(243, 169, 248, 0.66) 50.74%,
+            #e0d8f0 80.49%,
+            #eaf7fe 127.9%,
+            #eaf7fe 149.54%);
+}
 
-  .donate-body {
-      margin: auto;
-      height: 1156px;
-      width: 1160px;
-  }
+.title__donate {
+    font-size: 36px;
+    line-height: 130%;
+    color: #ffffff;
+    font-weight: 400;
 
-  .title__donate {
-      font-size: 36px;
-      line-height: 130%;
-      color: #FFFFFF;
-      font-weight: 400;
+    margin-bottom: 10px;
+}
 
-      margin-bottom: 10px;
-  }
+.decription__donate {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+    color: #ffffff;
 
-  .decription__donate {
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 22px;
-      color: #FFFFFF;
+    margin-bottom: 40px;
+}
 
-      margin-bottom: 40px;
-  }
+.subtitle__donate {
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 130%;
+    color: #fe9013;
+    margin-bottom: 60px;
+}
 
+.donate__container {
+    background: rgba(255, 255, 255, 0.52);
+    backdrop-filter: blur(2px);
+    height: 964px;
+    border-radius: 20px;
+    padding-top: 40px;
+    padding-right: 92px;
+    padding-left: 92px;
+    max-width: 100%;
+}
 
-  .subtitle__donate {
-      font-weight: 400;
-      font-size: 36px;
-      line-height: 130%;
-      color: #FE9013;
-      margin-bottom: 60px;
+.donate-body {
+    max-width: 1160px;
+    margin: 0 auto;
+    padding: 0 30px;
+}
 
-  }
+.title_donate-container {
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 120%;
+    text-align: center;
+    color: #fe9013;
+}
 
-  .donate__container {
-      background: rgba(255, 255, 255, 0.52);
-      backdrop-filter: blur(2px);
-      height: 964px;
-      border-radius: 20px;
-      padding-top: 40px;
-      padding-right: 92px;
-      padding-left: 92px;
+.subtitle_donate-container {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 120%;
+    color: #333b41;
+    text-align: center;
+}
 
-  }
+.title_donate-container {
+    margin-bottom: 10px;
+}
 
-  .title_donate-container {
-      font-weight: 400;
-      font-size: 48px;
-      line-height: 120%;
-      text-align: center;
-      color: #FE9013;
-  }
+.subtitle_donate-container {
+    margin-bottom: 60px;
+}
 
+.image__donate-animals {
+    display: flex;
+    height: 246px;
+    width: 976px;
+    flex-direction: row;
+    justify-content: center;
+    gap: 64px;
+    margin-bottom: 48px;
+}
 
-  .subtitle_donate-container {
-      font-weight: 400;
-      font-size: 24px;
-      line-height: 120%;
-      color: #333B41;
-  }
+.donate__number {
+    margin-top: 105px;
+    text-align: center;
+}
 
-  .title_donate-container {
-      margin-bottom: 10px;
-  }
+.number_panda {
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 72px;
+}
 
+.text_panda {
+    font-weight: 400;
+    font-size: 16px;
+}
 
-  .subtitle_donate-container {
-      margin-bottom: 60px;
-  }
+.donate__number_wrapper {
+    display: flex;
+}
 
-  .image__donate-animals {
-      display: flex;
-      height: 246px;
-      width: 976px;
-      flex-direction: row;
-      justify-content: center;
-      gap: 64px;
-      margin-bottom: 48px;
-  }
+.donate__number_wrapper>img {
+    margin-top: 130px;
+    width: 14px;
+    height: 14px;
+}
 
-  .donate__number {
-      margin-top: 105px;
-      text-align: center;
-  }
+.donate__buttons {
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
 
-  .number_panda {
-      font-weight: 500;
-      text-transform: uppercase;
-      font-size: 72px;
-  }
+    align-items: center;
+}
 
-  .text_panda {
-
-      font-weight: 400;
-      font-size: 16px;
-  }
-
-  /* .price-list {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      margin: 0 auto 50px px;
-      padding: 0;
-      color: #333B41;
-      font-family: "Roboto", sans-serif;
-  }
-
-  .price-text {
-      font-weight: 500;
-      font-size: 26px;
-      line-height: 140%;
-      width: 80px;
-      text-align: center;
-      margin: 0;
-      padding: 0;
-      color: #333B41;
-      font-family: "Roboto", sans-serif;
-      display: block;
-      -webkit-text-size-adjust: 100%;
-      height: 100%;
-      user-select: none;
-  } */
-
-  .donate__number_wrapper {
-      display: flex;
-  }
-
-  .donate__number_wrapper>img {
-      margin-top: 130px;
-      width: 14px;
-      height: 14px;
-  }
-
-  .donate__buttons {
-      display: flex;
-      flex-direction: column;
-      margin-top: 50px;
-      align-items: center;
-      gap: 30px;
-  }
+.donate__button {
+    border-radius: 25px;
+    margin-bottom: 30px;
+    margin-bottom: 30px;
+}
 
 
-  .donate__button {
+.donate__radiobuttons {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 25px;
+    margin-bottom: 30px;
 
-      border-radius: 5px;
-  }
+}
 
-  .donate__radiobuttons {
+.donate__radiobuttons label {
+    position: relative;
+    user-select: none;
+    display: inline-block;
+    cursor: pointer;
+    margin-right: 0;
+    padding-left: 25px;
+    line-height: 18px;
+}
 
-      display: flex;
-      justify-content: center;
-      gap: 50px;
-  }
+.time {
+    display: none;
+}
 
-  .donate__radiobuttons label {
-      position: relative;
-      user-select: none;
-      display: inline-block;
-      cursor: pointer;
-      margin-right: 0;
-      padding-left: 25px;
-      line-height: 18px;
+.radiobutton-item label:before {
+    content: "";
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    left: 0;
+    border: 1px solid #fe9013;
+    border-radius: 50%;
+}
 
-  }
+.time:checked+label:before {
+    border: 1px solid #4b9200;
+    background-color: #4b9200;
+}
 
-  .time {
-      display: none;
-  }
+.radiobutton-item label:hover:before {
+    filter: brightness(120%);
+}
 
-  .radiobutton-item label:before {
-      content: "";
-      display: inline-block;
-      width: 16px;
-      height: 16px;
-      position: absolute;
-      left: 0;
-      border: 1px solid #fe9013;
-      border-radius: 50%;
-  }
+.donate__radiobuttons label:before {
+    content: "";
+    border-radius: 50%;
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    width: 16px;
+    height: 16px;
+    border: 1px solid #fe9013;
+}
 
-  .time:checked+label:before {
-      border: 1px solid #4b9200;
-      background-color: #4b9200;
-  }
+.another_amount {
+    position: relative;
+    width: 268px;
+    height: 54px;
+    border: 1px solid #929699;
+    padding-left: 9px;
+}
 
-  .radiobutton-item label:hover:before {
-      filter: brightness(120%);
-  }
+.wrapper__another-amount {
+    position: relative;
+}
 
-  .donate__radiobuttons label:before {
-      content: "";
-      border-radius: 50%;
-      display: inline-block;
-      position: absolute;
-      left: 0;
-      width: 16px;
-      height: 16px;
-      border: 1px solid #fe9013;
-  }
+.wrapper__another-amount>.donate-icon__dollar {
+    position: absolute;
+    top: 11px;
+    right: 10px;
+    font-size: 25px;
+    font-weight: 700;
+    color: #929699;
+}
 
-  .another_amount {
-      position: relative;
-      width: 268px;
-      height: 54px;
-      border: 1px solid #929699;
-      padding-left: 9px;
-  }
+.wrapper__another-amount:active .donate-icon__dollar {
+    color: green;
+}
 
-  .wrapper__another-amount {
-      position: relative;
-  }
+.donate__shared {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: #333b41;
+}
 
-  .wrapper__another-amount>img {
-      position: absolute;
-      top: 17px;
-      right: 10px;
-  }
+.donate__text-amount {
+    margin: 10px;
+}
 
-  .donate__shared {
-      font-weight: 400;
-      font-size: 16px;
-      line-height: 22px;
-      color: #333B41;
-  }
+.donate-range {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    content: "";
+    width: 975px;
+    height: 27px;
+    background: #404950;
+    border-radius: 2px;
+    border: 1px solid transparent;
+}
+
+.donate-range__input[type="range"] {
+    width: 955px;
+    height: 2px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+.donate-range__input {
+    position: relative;
+    z-index: 2;
+    top: 6px;
+    content: "";
+    background: #72828e;
+    background: transparent;
+    border-radius: 2px;
+    border: 1px solid transparent;
+}
+
+.donate-range__input[type="range"]::-webkit-slider-thumb {
+    background: url(../../assets/icons/yellow-circle.svg);
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    -webkit-appearance: none;
+}
+
+.donate-range__input[type="range"]::-moz-range-thumb {
+    background: url(../../assets/icons/yellow-circle.svg);
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    -webkit-appearance: none;
+    border: none;
+}
+
+.grey-line {
+    position: absolute;
+    width: 915px;
+    height: 2px;
+    background: #72828e;
+    /* left: 30px; */
+    z-index: 0;
+}
+
+.donate-circle {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    gap: 120.5px;
+    z-index: 1;
+}
+
+.range-circle__item {
+    content: "";
+    left: 26px;
+    background: #ffee2e;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+}
+
+.range-circle__item {
+    cursor: pointer;
+}
+
+.donate-range__input:hover {
+    cursor: pointer;
+}
+
+.donate-number {
+    margin-top: 18px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 26px;
+}
